Add logo picture

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     {% block corejs %}
     <!-- Javascript -->
     <script src=" https://kit.fontawesome.com/a985752e7d.js" crossorigin="anonymous"></script>
-    crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -51,98 +51,69 @@
 <body>
     <!-- Main page header -->
     <header class="container-fluid fixed-top">
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-3 py-1 py-lg-0 text-center text-lg-left ">
-                <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <!-- <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2> -->
-                    <img src="{{ MEDIA_URL }}logo_1.png" type="image/png">
 
-                </a>
+        <!-- Search -->
 
-            </div>
-            <!-- <a class="navbar-brand" href="/">
-                <div class="logo-image">
-                    <img src=" {{ MEDIA_URL }}logo_1.png">
-                </div>
-            </a> -->
-            <!-- Search -->
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 ">
-                <form method="GET" action="{% url 'products' %}">
-                    <div class="input-group w-100">
-                        <label for="siteSearch" class="sr-only">Search</label>
-                        <input class="form-control border border-black rounded-0" id="siteSearch" type="text" name="q"
-                            placeholder="Search our site" />
-                        <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" aria-label="submit"
-                                type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
+        <!-- Account option when logged in or out-->
+        <div class="col-12 col-lg-5 my-auto py-1 py-lg-0">
+            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <li class="list-inline-item dropdown">
+                    <a class="text-black nav-link" href="#" data-bs-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        <div class="">
+                            <div><i class="fas fa-user fa-lg"></i></div>
+                            <p class="my-0">My Account</p>
                         </div>
+                    </a>
+                    <div class="dropdown-menu border-0">
+                        {% if request.user.is_authenticated %} {% if request.user.is_superuser %}
+                        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                        {% endif %}
+                        <a href="{% url 'blog' %}" class="dropdown-item">Fitness Hub</a>
+                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        {% else %}
+                        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        {% endif %}
                     </div>
-                </form>
-            </div>
-            <!-- Account option when logged in or out-->
-            <div class="col-12 col-lg-5 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" data-bs-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <div class="text-center">
-                                <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
-                            </div>
-                        </a>
-                        <div class="dropdown-menu border-0">
-                            {% if request.user.is_authenticated %} {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                            {% endif %}
-                            <a href="{% url 'blog' %}" class="dropdown-item">Fitness Hub</a>
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                </li>
+                <!-- favourites -->
+                <li class="list-inline-item">
+                    <a class="{% if favourites_count %} font-weight-bold{% else %}text-black{% endif %} nav-link"
+                        href="{% url 'view_product_favourites' %}">
+                        <div class="text-center">
+                            {% if favourites_count %}
+                            <div><i class="fas fa-list"></i></div>
+                            <p class="my-0">
+                                Wishlist ({{ favourites_items_count }})
+                            </p>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            <div><i class="fas fa-list fa-lg"></i></div>
+                            <p class="my-0">
+                                Wishlist ({{ favourites_items_count }})
+                            </p>
                             {% endif %}
                         </div>
-                    </li>
-                    <!-- favourites -->
-                    <li class="list-inline-item">
-                        <a class="{% if favourites_count %} font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_product_favourites' %}">
-                            <div class="text-center">
-                                {% if favourites_count %}
-                                <div><i class="fas fa-list"></i></div>
-                                <p class="my-0">
-                                    Wishlist ({{ favourites_items_count }})
-                                </p>
-                                {% else %}
-                                <div><i class="fas fa-list fa-lg"></i></div>
-                                <p class="my-0">
-                                    Wishlist ({{ favourites_items_count }})
-                                </p>
-                                {% endif %}
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link"
-                            href="{% url 'view_bag' %}">
-                            <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-0">
-                                    {% if grand_total %} £{{ grand_total|floatformat:2 }} {% else %} £0.00 {% endif %}
-                                </p>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="{% if grand_total %} font-weight-bold{% else %}text-black{% endif %} nav-link"
+                        href="{% url 'view_bag' %}">
+                        <div class="text-center">
+                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                            <p class="my-0">
+                                {% if grand_total %} £{{ grand_total|floatformat:2 }} {% else %} £0.00 {% endif %}
+                            </p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
         <!-- Mobile and main nav area -->
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-light bg-blue-yonder w-100">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
