--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -32,9 +32,12 @@
                 <div class="pricing" style="display: flex;">
                     <p class="lead mb-2 text-left fw-bold text-black">£{{ product.price }}</p>
                     {% if is_product_in_favourites %}
-                    <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
+                    <a href="{% url 'remove_product_from_favourites' product.id 'product' %}"
+                        aria-label="remove product from favourites"
+                        class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
                     {% else %}
-                    <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" class="favourite text-danger ml-3"><i class="fas fa-list"></i></a>
+                    <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites"
+                        class="favourite text-danger ml-3"><i class=""></i></a>
                     {% endif %}
                 </div>
                 <!-- Main Products Container -->
@@ -42,7 +45,8 @@
                     <div class="product-details-container mb-5 mt-2">
                         {% if product.category %}
                         <p class="small mt-1 mb-0">
-                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }} </a>
+                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i
+                                    class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }} </a>
                         </p>
                         {% endif %}
                         <!-- Products rating -->
@@ -64,7 +68,8 @@
                                 {% with product.has_sizes as s %} {% if s %}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
+                                    <select class="form-control rounded-0 w-50" name="product_size"
+                                        id="id_product_size">
                                         <option value="xs">XS</option>
                                         <option value="s">S</option>
                                         <option value="m" selected>M</option>
@@ -79,16 +84,22 @@
                                     <div class="form-group w-50">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-black rounded-0" aria-label="qty-decrease" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <button class="decrement-qty btn btn-black rounded-0"
+                                                    aria-label="qty-decrease" data-item_id="{{ product.id }}"
+                                                    id="decrement-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-minus"></i>
                                                     </span>
                                                 </button>
                                             </div>
                                             <label for="qt_input" class="sr-only">Search</label>
-                                            <input class="form-control qty_input" id="qt_input"type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" />
+                                            <input class="form-control qty_input" id="qt_input" type="number"
+                                                name="quantity" value="1" min="1" max="99"
+                                                data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" />
                                             <div class="input-group-append">
-                                                <button class="increment-qty btn btn-black rounded-0" aria-label="qty-increase" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <button class="increment-qty btn btn-black rounded-0"
+                                                    aria-label="qty-increase" data-item_id="{{ product.id }}"
+                                                    id="increment-qty_{{ product.id }}">
                                                     <span class="icon">
                                                         <i class="fas fa-plus"></i>
                                                     </span>
@@ -104,7 +115,8 @@
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5" value="Add to Bag" />
+                                    <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5"
+                                        value="Add to Bag" />
                                 </div>
                                 <input type="hidden" name="redirect_url" value="{{ request.path }}" />
                                 {% endwith %}
