--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -26,7 +26,7 @@
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-user fa-lg"></i></div>
-            <!-- <p class="my-0 d-none d-lg-block">My Account</p> -->
+            <p class="my-0 d-none d-lg-block">My Account</p>
         </div>
     </a>
     <div class="dropdown-menu border-0" aria-labelledby="user-options-mobile">
