--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap');
 
 /* --- Global styling --- */
 html {
@@ -29,9 +29,11 @@ body {
 }
 
 /* Style for logo font */
-.logo-font {
-    text-transform: uppercase;
-    font-size: 23px;
+
+li.nav-item.logo-font {
+    /* font-size: 100px;
+    font-family: 'Exo', sans-serif;
+    text-transform: capitalize; */
 }
 
 /* Main logo link */
@@ -303,9 +305,9 @@ a.category-badge>span.badge:hover {
         height: calc(100vh - 116px);
     }
 
-    .display-4.logo-font.text-black {
+    /* .display-4.logo-font.text-black {
         font-size: 2rem;
-    }
+    } */
 
     .nav-link {
         padding: 0.15rem;
@@ -351,12 +353,6 @@ a.category-badge>span.badge:hover {
     /* Hide category badge*/
     .category-badge {
         display: none;
-    }
-
-    /* Logo font */
-    .logo-font {
-        font-size: 20px;
-        font-weight: bold;
     }
 
     /* Hide back to top button */
