--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,9 +1,15 @@
 <!-- Main nav container -->
 <div class="collapse navbar-collapse" id="main-nav">
     <nav class="nav">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
-        <a class="nav-link" href="#">Link</a>
-        <a class="nav-link" href="#">Link</a>
+        <li class="nav-item logo-font">
+            <a class="nav-link active" aria-current="page" href="#">Shop</a>
+        </li>
+        <li class="nav-item logo-font">
+            <a class="nav-link" href="#">Plans</a>
+        </li>
+        <li class="nav-item logo-font">
+            <a class="nav-link" href="#">Contact</a>
+        </li>
         <!-- <a class="nav-link disabled">Disabled</a> -->
     </nav>
     <ul class="navbar-nav mx-auto">
