--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,14 +1,14 @@
 <!-- Main nav container -->
 <div class="collapse navbar-collapse" id="main-nav">
     <nav class="nav">
-        <li class="nav-item logo-font">
-            <a class="nav-link active" aria-current="page" href="#">Shop</a>
+        <li class="nav-item">
+            <a class="nav-link active logo-font" aria-current="page" href="#">Shop</a>
         </li>
-        <li class="nav-item logo-font">
-            <a class="nav-link" href="#">Plans</a>
+        <li class="nav-item">
+            <a class="nav-link logo-font" href="#">Plans</a>
         </li>
-        <li class="nav-item logo-font">
-            <a class="nav-link" href="#">Contact</a>
+        <li class="nav-item">
+            <a class="nav-link logo-font" href="#">Contact</a>
         </li>
         <!-- <a class="nav-link disabled">Disabled</a> -->
     </nav>
