--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,28 +2,21 @@
 {% load static %}
 {% block page_header %}
 <!--Main header block -->
-<div class="container header-container">
-  <div class="row">
-    <div class="col"></div>
-  </div>
-</div>
+<div class="container header-container"></div>
 {% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'home/css/carousel.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'home/css/home.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content %}
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
-  </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
-  </div>
+    <div class="col-sm-6 col-md-6 col-lg-6">
+        <img src=" {{ MEDIA_URL }}exercise_1.jpg" alt="" class="responsive">
+    </div>
+    <div class="col-md-6">
+        <P>Hello</P>
+    </div>
 </div>
-
 {% endblock %}
 <!-- Postload Javascript -->
 {% block postloadjs %}
