--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,8 +1,16 @@
 /* Create two equal columns that floats next to each other */
-.container {
-  column-count: 2;
+.img.responsive {
+    max-width: 960px;
 }
 
-.p {
-  font-size: 100px;
+.column {
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
