Change button size

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <img src=" {{ MEDIA_URL }}exercise_1.jpg" alt="" class="responsive">
     </div>
     <div class="column">
-        <h2>Smash all your fitness goals</h2>
+        <h2 class="ml-5">Smash all your fitness goals</h2>
         <input type="submit" class="btn btn-success rounded-2 text-uppercase mt-5" value="Shop Now">
     </div>
 </div>
