--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="column">
         <h2 class="ml-5">Smash all your fitness goals</h2>
-        <input type="submit" class="btn btn-success rounded-2 text-uppercase mt-5" value="Shop Now">
+        <input type="submit" class="btn btn-success rounded-2 text-uppercase" value="Shop Now">
     </div>
 </div>
 
