--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,9 +13,10 @@
     <div class="column">
         <img src=" {{ MEDIA_URL }}exercise_1.jpg" alt="" class="responsive">
     </div>
-    <div class="column">
-        <h2 class="ml-5">Smash all your fitness goals</h2>
-        <input type="submit" class="btn btn-success rounded-2 text-uppercase" value="Shop Now">
+    <div class="column cta-text">
+        <h5>Welcome to Love Fitness</h5>
+        <h2>Smash all your fitness goals</h2>
+        <input type="submit" class="btn btn-dark rounded-3 text-uppercase" value="Shop Now">
     </div>
 </div>
 
