Changed footer font colour to white

--- a/templates/base.html
+++ b/templates/base.html
@@ -127,8 +127,8 @@
                 <!-- Logo and social media links -->
                 <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                     <a href="{% url 'home' %}" aria-label="nav-link main-logo-link" class="nav-link main-logo-link">
-                        <h2 class="logo-font text-black my-0"><strong>Love</strong> Fitness</h2>
-                        <p class="text-black mt-4">Welcome to Love Fitness.</p>
+                        <h2 class="logo-font text-white my-0"><strong>Love</strong> Fitness</h2>
+                        <p class="text-white mt-4">Welcome to Love Fitness.</p>
                     </a>
                     <ul class="list-inline mt-4">
                         <li class="list-inline-item">
@@ -159,36 +159,36 @@
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
-                    <h2 class="logo-font text-uppercase font-weight-bold mb-4 text-black">Products</h2>
+                    <h2 class="logo-font text-uppercase font-weight-bold mb-4 text-white">Products</h2>
                     <ul class="list-unstyled mb-0">
                         <li class="mb-2"><a href="{% url 'products' %}?category=leggings"
-                                class="text-black">Leggings</a></li>
+                                class="text-white">Leggings</a></li>
                         <li class="mb-2"><a href="{% url 'products' %}?category=sports_nutrition"
-                                class="text-black">Nutrition</a></li>
+                                class="text-white">Nutrition</a></li>
                         <li class="mb-2"><a href="{% url 'products' %}?category=shorts" class="text-black">Shorts</a>
                         </li>
-                        <li class="mb-2"><a href="{% url 'products' %}?category=sports_bra" class="text-black">Sports
+                        <li class="mb-2"><a href="{% url 'products' %}?category=sports_bra" class="text-white">Sports
                                 Bra</a></li>
-                        <li class="mb-2"><a href="{% url 'products' %}?category=tops_t-shirts" class="text-black">Tops
+                        <li class="mb-2"><a href="{% url 'products' %}?category=tops_t-shirts" class="text-white">Tops
                                 &amp; T-Shirts</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6 col-xs-6 mb-4 mb-lg-0">
-                    <h2 class="logo-font text-uppercase font-weight-bold mb-4 text-black">Website</h2>
+                    <h2 class="logo-font text-uppercase font-weight-bold mb-4 text-whitek">Website</h2>
                     <ul class="list-unstyled mb-0">
                         {% if request.user.is_authenticated %} {% if request.user.is_superuser %}
-                        <li class="mb-2"><a href="" class="text-black">Product Management</a></li>
+                        <li class="mb-2"><a href="" class="text-white">Product Management</a></li>
                         {% endif %}
-                        <li class="mb-2"><a href="" class="text-black">My Profile</a></li>
+                        <li class="mb-2"><a href="" class="text-white">My Profile</a></li>
                         {% else %}
-                        <li class="mb-2"><a href="{% url 'account_signup' %}" class="text-black">Register</a></li>
-                        <li class="mb-2"><a href="{% url 'account_login' %}" class="text-black">Login</a></li>
+                        <li class="mb-2"><a href="{% url 'account_signup' %}" class="text-white">Register</a></li>
+                        <li class="mb-2"><a href="{% url 'account_login' %}" class="text-white">Login</a></li>
                         {% endif %}
                     </ul>
                 </div>
                 <!-- Copyright information -->
                 <div class="bg-white py-1">
-                    <div class="container text-center text-black">
+                    <div class="container text-center text-white">
                         <p class="mb-0 py-2 footer-font">© 2021 All rights reserved.</p>
                     </div>
                 </div>
