--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,8 +4,15 @@
         <li class="nav-item">
             <a class="nav-link active logo-font" aria-current="page" href="#">Shop</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link logo-font" href="#">Plans</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link text-grey logo-font" href="#" id="homeware-link" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="true">
+                Plans
+            </a>
+            <!-- <div class="dropdown-menu border-0 show" aria-labelledby="homeware-link" data-bs-popper="none">
+                <a href="/products/?category=exercise" class="dropdown-item">Exercise</a>
+                <a href="/products/?category=nutrition" class="dropdown-item">Nutrition</a>
+            </div> -->
         </li>
         <li class="nav-item">
             <a class="nav-link logo-font" href="#">Contact</a>
@@ -13,9 +20,9 @@
         <!-- <a class="nav-link disabled">Disabled</a> -->
     </nav>
     <ul class="navbar-nav mx-auto">
-        <a class="navbar-brand " href="/">
+        <a class="navbar-brand" href="/">
             <div class="logo-image">
-                <img src=" {{ MEDIA_URL }}logo.png" height="50">
+                <img src=" {{ MEDIA_URL }}logo.png" height="50" />
             </div>
         </a>
     </ul>
@@ -71,5 +78,5 @@
                 </div>
             </a>
         </li>
-        </ul>
+    </nav>
 </div>
