--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     {% block meta %}
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no />
     <base href="/" />
     {% endblock %}
     {% block extra_meta %}
@@ -109,7 +109,7 @@
     {% block content %}
     {% endblock %}
     <!-- Footer info banner -->
-    <div class="container-fluid bg-wild-blue-yonder pt-4 pb-4 text-center">
+    <!-- <div class="container-fluid bg-wild-blue-yonder pt-4 pb-4 text-center">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer -->
     <footer class="bg-black">
         <div class="container pt-5">
