--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,29 +1,21 @@
-/* Create two equal columns that floats next to each other */
-.img.responsive {
-    max-width: 960px;
+.box {
+    position: relative;
+    text-align: left;
+    color: white;
 }
 
-.column {
-    float: left;
-    width: 50%;
+.some-text {
+position: absolute;
+bottom: 8px;
+left: 16px;
+padding-left: 5rem;
+
 }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.column.cta-text {
+#cta-text {
     margin-top: 15%;
     padding-left: 5rem;
     font-family: exo;
     color: black;
 }
 
-@media screen and (max-width: 600px) {
-    .column {
-        width: 100%;
-    }
-}
