Refactor: Changed font

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2>Smash all your fitness goals</h2>
-                    <input type="submit" class="btn btn-dark rounded-3 text-uppercase" value="Shop Now" />
+                    <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2>Smash all your fitness goals</h2>
-                    <input type="submit" class="btn btn-dark rounded-3 text-uppercase" value="Shop Now" />
+                    <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2>Smash all your fitness goals</h2>
-                    <input type="submit" class="btn btn-dark rounded-3 text-uppercase" value="Shop Now" />
+                    <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
         </div>
