--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap');
 
 /* --- Global styling --- */
+.navbar {
+    background-color: white;
+}
+
 html {
     height: 100%;
 }
